feat: added elements to user after creation
